--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Vorepuestos</title>
+  <title>V.O Repuestos</title>
+  <link rel="icon" type="image/png" href="https://www.flaticon.com/svg/static/icons/svg/3463/3463455.svg"/>
   <link rel="stylesheet" href="css/whatsapp.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
     integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
@@ -18,9 +19,9 @@
   <!--<div id="loader">
     <img src="images/740.gif" width="30%"/>
   </div>-->
-    <a href="https://api.whatsapp.com/send?phone=+573507318986&text=¿Pregunta por nuestras ofertas!?"
-    class="float animate__animated animate__bounce animate__slower animate__infinite" target="_blank">
-    <i class="fa fa-whatsapp my-float"></i>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+  <a href="https://api.whatsapp.com/send?phone=573107912748&text=Pregunta%20por%20nuestras%20Promosiones!" class="float animate__animated animate__bounce animate__slower animate__infinite" target="_blank">
+  <i class="fa fa-whatsapp my-float"></i>
   </a>
   <nav>
     <input type="checkbox" id="check">
@@ -109,7 +110,7 @@
         cómo en la venta de autopartes eléctricas. <br>
         Desarrollando e implementando nuevos procesos para prestar un servicio sostenible en el mercado</p>-->
       <div class="d-flex flex-wrap">
-        <div class="card">
+        <div class="card animado">
           <img src="images/galeria/auto2.JPG" class="card-img-top" alt="Sincronizacion">
           <div class="card-body">
             <h5 class="card-title">Sincronizacion</h5>
@@ -119,7 +120,7 @@
             <a href="#" class="btn btn-primary">Un poco mas</a>
           </div>
         </div>
-        <div class="card">
+        <div class="card animado">
           <img src="images/galeria/auto4.JPG" class="card-img-top" alt="Servicio Electrico Automotriz">
           <div class="card-body">
             <h5 class="card-title">Servicio Electrico Automotriz</h5>
@@ -128,7 +129,7 @@
             <a href="#" class="btn btn-primary">Un poco mas</a>
           </div>
         </div>
-        <div class="card">
+        <div class="card animado">
           <img src="images/galeria/auto6.JPG" class="card-img-top" alt="Electricidad y Electronica Automotriz">
           <div class="card-body">
             <h5 class="card-title">Elictricidad y Electronica Automotriz</h5>
@@ -139,7 +140,7 @@
             <a href="#" class="btn btn-primary">Un poco mas</a>
           </div>
         </div>
-        <div class="card">
+        <div class="card animado">
           <img src="images/galeria/auto5.JPG" class="card-img-top" alt="Revisión Tecnomecanica">
           <div class="card-body">
             <h5 class="card-title">Revision Tecnomecanica</h5>
@@ -151,7 +152,7 @@
             <a href="#" class="btn btn-primary">Un poco mas</a>
           </div>
         </div>
-        <div class="card">
+        <div class="card animado">
           <img src="images/galeria/Frenos.jpg" class="card-img-top" alt="Frenos">
           <div class="card-body">
             <h5 class="card-title">Frenos</h5>
@@ -163,7 +164,7 @@
             <a href="#" class="btn btn-primary">Un poco mas</a>
           </div>
         </div>
-        <div class="card">
+        <div class="card animado">
           <img src="images/galeria/Suspension.png" class="card-img-top" alt="Suspension">
           <div class="card-body">
             <h5 class="card-title">Suspension</h5>
@@ -296,7 +297,7 @@
               </figure>
               <figure class="figure">
                 <img src="images/galeria/prod14.JPG" class="figure-img img-fluid rounded" alt="Bosch super 4">
-                <figcaption class="figure-caption text-right">Bosch super 4.</figcaption>
+                <figcaption class="figure-caption text-right">Bujias Bosch super 4.</figcaption>
               </figure>
               <figure class="figure">
                 <img src="images/galeria/prod15.JPG" class="figure-img img-fluid rounded"
@@ -313,64 +314,64 @@
               </figure>
               <figure class="figure">
                 <img src="images/galeria/prod18.JPG" class="figure-img img-fluid rounded" alt="Nigth Breaker Laser">
-                <figcaption class="figure-caption text-right">Nigth Breaker Laser.</figcaption>
+                <figcaption class="figure-caption text-right">Bombillos OSRAM.</figcaption>
               </figure>
               <figure class="figure">
                 <img src="images/galeria/prod19.JPG" class="figure-img img-fluid rounded" alt="Total parts">
-                <figcaption class="figure-caption text-right">Total parts.</figcaption>
+                <figcaption class="figure-caption text-right">Arranque Total Parts.</figcaption>
               </figure>
               <figure class="figure">
                 <img src="images/galeria/pastillas.jpeg" class="figure-img img-fluid rounded" alt="Optima Batteries">
-                <figcaption class="figure-caption text-right">Optima Batteries.</figcaption>
+                <figcaption class="figure-caption text-right">Pstillas Bosh.</figcaption>
               </figure>
               <figure class="figure">
                 <img src="images/galeria/pastillas2.jpeg" class="figure-img img-fluid rounded" alt="Otros">
-                <figcaption class="figure-caption text-right">Otros.</figcaption>
+                <figcaption class="figure-caption text-right">Boba de Combustible Bosh.</figcaption>
               </figure>
               <figure class="figure">
                 <img src="images/Otros Productos/WhatsApp Image 2020-11-17 at 8.18.04 PM.jpeg"
                   class="figure-img img-fluid rounded" alt="Total parts">
-                <figcaption class="figure-caption text-right">Total parts.</figcaption>
+                <figcaption class="figure-caption text-right">Filtro ACDelco.</figcaption>
               </figure>
               <figure class="figure">
                 <img src="images/Otros Productos/WhatsApp Image 2020-11-17 at 8.22.36 PM.jpeg"
                   class="figure-img img-fluid rounded" alt="Optima Batteries">
-                <figcaption class="figure-caption text-right">Optima Batteries.</figcaption>
+                <figcaption class="figure-caption text-right">Bocinas Hella.</figcaption>
               </figure>
               <figure class="figure">
                 <img src="images/Otros Productos/WhatsApp Image 2020-11-17 at 8.22.37 PM.jpeg"
                   class="figure-img img-fluid rounded" alt="Otros">
-                <figcaption class="figure-caption text-right">Otros.</figcaption>
+                <figcaption class="figure-caption text-right">Pitos.</figcaption>
               </figure>
               <figure class="figure">
                 <img src="images/Otros Productos/WhatsApp Image 2020-11-17 at 8.22.40 PM.jpeg"
                   class="figure-img img-fluid rounded" alt="Total parts">
-                <figcaption class="figure-caption text-right">Total parts.</figcaption>
+                <figcaption class="figure-caption text-right">Bombillos OSRAM.</figcaption>
               </figure>
               <figure class="figure">
                 <img src="images/Otros Productos/WhatsApp Image 2020-11-17 at 8.22.43 PM.jpeg"
                   class="figure-img img-fluid rounded" alt="Optima Batteries">
-                <figcaption class="figure-caption text-right">Optima Batteries.</figcaption>
+                <figcaption class="figure-caption text-right">Bobina Valeo.</figcaption>
               </figure>
               <figure class="figure">
                 <img src="images/Otros Productos/WhatsApp Image 2020-11-17 at 8.22.46 PM (1).jpeg"
                   class="figure-img img-fluid rounded" alt="Otros">
-                <figcaption class="figure-caption text-right">Otros.</figcaption>
+                <figcaption class="figure-caption text-right">Arranque.</figcaption>
               </figure>
               <figure class="figure">
                 <img src="images/galeria/pastillas3.jpeg"
                   class="figure-img img-fluid rounded" alt="Otros">
-                <figcaption class="figure-caption text-right">Otros.</figcaption>
+                <figcaption class="figure-caption text-right">Bobina ACDelco.</figcaption>
               </figure>
               <figure class="figure">
                 <img src="images/galeria/pastillas4.jpeg"
                   class="figure-img img-fluid rounded" alt="Otros">
-                <figcaption class="figure-caption text-right">Otros.</figcaption>
+                <figcaption class="figure-caption text-right">Farol Hella.</figcaption>
               </figure>
               <figure class="figure">
                 <img src="images/galeria/pastillas5.jpeg"
                   class="figure-img img-fluid rounded" alt="Otros">
-                <figcaption class="figure-caption text-right">Otros.</figcaption>
+                <figcaption class="figure-caption text-right">Bombillos OSRAM.</figcaption>
               </figure>
             </div>
           </div>
@@ -498,7 +499,7 @@
 
             <div class="redes-s">
 
-              <a href="#"><i class="icon-facebook"></i></a>
+              <a href="https://www.facebook.com/VORepuestos1-103385541458976"><i class="icon-facebook"></i></a>
               <a href="#"><i class="icon-twitter"></i></a>
               <a href="#"><i class="icon-linkedin"></i></a>
 
