Add some Carousel Changes

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>V.O Repuestos</title>
-  <link rel="icon" type="image/png" href="https://www.flaticon.com/svg/static/icons/svg/3463/3463455.svg"/>
+  <link rel="icon" type="image/png" href="https://www.flaticon.com/svg/static/icons/svg/3463/3463455.svg" />
   <link rel="stylesheet" href="css/whatsapp.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
     integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
@@ -20,8 +20,9 @@
     <img src="images/740.gif" width="30%"/>
   </div>-->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-  <a href="https://api.whatsapp.com/send?phone=573107912748&text=Pregunta%20por%20nuestras%20Promosiones!" class="float animate__animated animate__bounce animate__slower animate__infinite" target="_blank">
-  <i class="fa fa-whatsapp my-float"></i>
+  <a href="https://api.whatsapp.com/send?phone=573107912748&text=Pregunta%20por%20nuestras%20Promosiones!"
+    class="float animate__animated animate__bounce animate__slower animate__infinite" target="_blank">
+    <i class="fa fa-whatsapp my-float"></i>
   </a>
   <nav>
     <input type="checkbox" id="check">
@@ -43,39 +44,39 @@
     <!-- ----------------------------------------------------------------------------------------- -->
 
     <section class="carousel" id="carousel">
-      <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+      <div id="carousel-1" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
-          <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
-          <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
-          <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+          <li data-target="#carousel-1" data-slide-to="0" class="active"></li>
+          <li data-target="#carousel-1" data-slide-to="1"></li>
+          <li data-target="#carousel-1" data-slide-to="2"></li>
 
         </ol>
         <div class="carousel-inner">
-          <div class="carousel-item active">
+          <div class="carousel-item active " data-interval="1000">
             <img src="images/img/carrusel1.JPG" class="d-block w-100" alt="Electronica d un auto">
             <div class="carousel-caption d-none d-md-block">
               <h5>Las Mejores Soluciones</h5>
               <p>Aplicando las mejores soluciones del mercado.</p>
             </div>
           </div>
-          <div class="carousel-item">
+          <div class="carousel-item" data-interval="1000">
             <img src="images/img/carrusel2.jpg" class="d-block w-100" alt="Mecanica de un auto">
             <div class="carousel-caption d-none d-md-block">
               <h5>Soluciones Efectivas</h5>
               <p>Siempre en busca de las mejores posibilidades y tecnologias</p>
             </div>
           </div>
-          <div class="carousel-item">
+          <div class="carousel-item" data-interval="1000">
             <img src="images/img/slider3.png" class="d-block w-100" alt="Disposotivos a la venta Baterias">
             <div class="d-none d-md-block">
             </div>
           </div>
         </div>
-        <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+        <a class="carousel-control-prev" href="#carousel-1" role="button" data-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
           <span class="sr-only">Previous</span>
         </a>
-        <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+        <a class="carousel-control-next" href="#carousel-1" role="button" data-slide="next">
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="sr-only">Next</span>
         </a>
@@ -359,18 +360,15 @@
                 <figcaption class="figure-caption text-right">Arranque.</figcaption>
               </figure>
               <figure class="figure">
-                <img src="images/galeria/pastillas3.jpeg"
-                  class="figure-img img-fluid rounded" alt="Otros">
+                <img src="images/galeria/pastillas3.jpeg" class="figure-img img-fluid rounded" alt="Otros">
                 <figcaption class="figure-caption text-right">Bobina ACDelco.</figcaption>
               </figure>
               <figure class="figure">
-                <img src="images/galeria/pastillas4.jpeg"
-                  class="figure-img img-fluid rounded" alt="Otros">
+                <img src="images/galeria/pastillas4.jpeg" class="figure-img img-fluid rounded" alt="Otros">
                 <figcaption class="figure-caption text-right">Farol Hella.</figcaption>
               </figure>
               <figure class="figure">
-                <img src="images/galeria/pastillas5.jpeg"
-                  class="figure-img img-fluid rounded" alt="Otros">
+                <img src="images/galeria/pastillas5.jpeg" class="figure-img img-fluid rounded" alt="Otros">
                 <figcaption class="figure-caption text-right">Bombillos OSRAM.</figcaption>
               </figure>
             </div>
@@ -382,43 +380,43 @@
     <!-- ---------------------------------------  MarksCa  --------------------------------------- -->
     <!-- ----------------------------------------------------------------------------------------- -->
     <section class="marksCarrusel" style="background:#090A0B;">
-      <div id="carouselExampleInterval" class="carousel slide" data-ride="carousel">
+      <div id="carousel-2" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
-          <div class="carousel-item active" data-interval="10000">
+          <div class="carousel-item active" data-interval="1000">
             <img src="images/Marcas Baterias/ACDelco_logo.svg.png" class="d-block w-100" alt="Chevrolet">
           </div>
-          <div class="carousel-item" data-interval="2000">
+          <div class="carousel-item" data-interval="1000">
             <img src="images/Marcas Baterias/Bosch_logo-3.png" class="d-block w-100" alt="Fiat">
           </div>
-          <div class="carousel-item">
+          <div class="carousel-item" data-interval="1000">
             <img src="images/Marcas Baterias/Imagen1.png" class="d-block w-100" alt="Ford">
           </div>
-          <div class="carousel-item">
+          <div class="carousel-item" data-interval="1000">
             <img src="images/Marcas Baterias/logo-tab-header.png" class="d-block w-100" alt="Great Wall">
           </div>
-          <div class="carousel-item">
+          <div class="carousel-item" data-interval="1000">
             <img src="images/Marcas Baterias/MAC_logo.png" class="d-block w-100" alt="Hiunday">
           </div>
-          <div class="carousel-item">
+          <div class="carousel-item" data-interval="1000">
             <img src="images/Marcas Baterias/motopartes-marca-coexitoevolution.png" class="d-block w-100" alt="Nissan">
           </div>
-          <div class="carousel-item">
+          <div class="carousel-item" data-interval="1000">
             <img src="images/Marcas Baterias/motorcraft-logo.png" class="d-block w-100" alt="Mitsubishi">
           </div>
-          <div class="carousel-item">
+          <div class="carousel-item" data-interval="1000">
             <img src="images/Marcas Baterias/optima-batteries-vector-logo.png" class="d-block w-100" alt="Audi">
           </div>
-          <div class="carousel-item">
+          <div class="carousel-item" data-interval="1000">
             <img src="images/Marcas Baterias/unnamed.png" class="d-block w-100" alt="kia">
           </div>
-          <div class="carousel-item">
+          <div class="carousel-item" data-interval="1000">
             <img src="images/Marcas Baterias/Varta-Logo.svg.png" class="d-block w-100" alt="Nissan">
           </div>
-          <a class="carousel-control-prev" href="#carouselExampleInterval" role="button" data-slide="prev">
+          <a class="carousel-control-prev" href="#carousel-2" role="button" data-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
             <span class="sr-only">Previous</span>
           </a>
-          <a class="carousel-control-next" href="#carouselExampleInterval" role="button" data-slide="next">
+          <a class="carousel-control-next" href="#carousel-2" role="button" data-slide="next">
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="sr-only">Next</span>
           </a>
@@ -450,7 +448,7 @@
         </div>
       </div>
 
-    <!--</section>
+      <!--</section>
     <section id="info">
       <h1 style="color: #202020;">NUESTRO EQUIPO</h1>
       <div class="contenedor">
@@ -469,55 +467,55 @@
       </div>
     </section>-->
 
-    <!-- ----------------------------------------------------------------------------------------- -->
-    <!-- ---------------------------------------  Contact  --------------------------------------- -->
-    <!-- ----------------------------------------------------------------------------------------- -->
-    <section class="contenedor__all" id="contact">
-      <div class="contenedor animado">
+      <!-- ----------------------------------------------------------------------------------------- -->
+      <!-- ---------------------------------------  Contact  --------------------------------------- -->
+      <!-- ----------------------------------------------------------------------------------------- -->
+      <section class="contenedor__all" id="contact">
+        <div class="contenedor animado">
 
-        <h1>Formulario Contactenos</h1>
+          <h1>Formulario Contactenos</h1>
 
-        <div class="contenido">
+          <div class="contenido">
 
-          <div class="info">
+            <div class="info">
 
-            <div class="col">
-              <i class="icono icon-envelope"></i>
-              <p><a href="mailto:rochipili@outlook.es" style="color: aliceblue;">rochipili@outlook.es</p></a>
+              <div class="col">
+                <i class="icono icon-envelope"></i>
+                <p><a href="mailto:rochipili@outlook.es" style="color: aliceblue;">rochipili@outlook.es</p></a>
+              </div>
+
+              <div class="col">
+                <i class="icono icon-phone"></i>
+                <p><a href="tel:310-791-2748" style="color: aliceblue;">(+57) 310 791-2748 </a></p>
+              </div>
+
+              <div class="col">
+                <i class="icono icon-direction"></i>
+                <p><a href=" https://goo.gl/maps/Xzh5YmVQky9Tz3Rs7" style="color: aliceblue;">Cra 46 # 130 - 56
+                    Bogotá</p></a>
+              </div>
+
+              <div class="redes-s">
+
+                <a href="https://www.facebook.com/VORepuestos1-103385541458976"><i class="icon-facebook"></i></a>
+                <a href="#"><i class="icon-twitter"></i></a>
+                <a href="#"><i class="icon-linkedin"></i></a>
+
+              </div>
+
             </div>
 
-            <div class="col">
-              <i class="icono icon-phone"></i>
-              <p><a href="tel:310-791-2748" style="color: aliceblue;">(+57) 310 791-2748 </a></p>
-            </div>
+            <form action="enviar.php" method="GET" class="formulario">
+              <input type="text" name="nombre" placeholder="Nombre y Apellido" id="nombre">
+              <input type="text" name="telefono" placeholder="Telefono" id="telefono">
+              <input type="text" name="correo" placeholder="Correo Electrico" id="correo">
+              <input type="text" name="asunto" placeholder="Asunto" id="asunto">
+              <textarea name="mensaje" id="mensaje" placeholder="Mensaje"></textarea>
+              <input type="submit" value="Enviar" id="button" onclick="mostrarmensaje()">
 
-            <div class="col">
-              <i class="icono icon-direction"></i>
-              <p><a href=" https://goo.gl/maps/Xzh5YmVQky9Tz3Rs7" style="color: aliceblue;">Cra 46 # 130 - 56
-                  Bogotá</p></a>
-            </div>
-
-            <div class="redes-s">
-
-              <a href="https://www.facebook.com/VORepuestos1-103385541458976"><i class="icon-facebook"></i></a>
-              <a href="#"><i class="icon-twitter"></i></a>
-              <a href="#"><i class="icon-linkedin"></i></a>
-
-            </div>
-
+            </form>
           </div>
-
-          <form action="enviar.php" method="GET" class="formulario">
-            <input type="text" name="nombre" placeholder="Nombre y Apellido" id="nombre">
-            <input type="text" name="telefono" placeholder="Telefono" id="telefono">
-            <input type="text" name="correo" placeholder="Correo Electrico" id="correo">
-            <input type="text" name="asunto" placeholder="Asunto" id="asunto">
-            <textarea name="mensaje" id="mensaje" placeholder="Mensaje"></textarea>
-            <input type="submit" value="Enviar" id="button" onclick="mostrarmensaje()" >
-
-          </form>
-        </div>
-    </section>
+      </section>
   </main>
   <!-- ----------------------------------------------------------------------------------------- -->
   <!-- ---------------------------------------  Footer  --------------------------------------- -->
@@ -543,9 +541,7 @@
             <p>Visa</p>
           </div>
           <div class="row">
-            <img
-              src="images/Imagen1.png"
-              alt="">
+            <img src="images/Imagen1.png" alt="">
             <p>Nequi</p>
           </div>
           <div class="row">
@@ -592,7 +588,7 @@
     <hr style="background: aliceblue;"><br>
     <h5 style="text-align: center;">Derechos Reservados © | V.O Repuestos </h5>
   </footer>
- <!-- <script type="text/javascript">
+  <!-- <script type="text/javascript">
   var loader = document.getElementById("loader");
 
   window.addEventListener("load",function(){
